--- a/index.html
+++ b/index.html
@@ -55,23 +55,7 @@ body {font-size:16px;}
 
             <!-- Photo grid (modal) -->
             <div class="w3-row-padding">
-                <div class="w3-half">
-                    <img src="/w3images/kitchenconcrete.jpg" style="width:100%"
-                        onclick="onClick(this)" alt="Concrete meets bricks">
-                    <img src="/w3images/livingroom.jpg" style="width:100%" onclick="onClick(this)"
-                        alt="Light, white and tight scandinavian design">
-                    <img src="/w3images/diningroom.jpg" style="width:100%" onclick="onClick(this)"
-                        alt="White walls with designer chairs">
-                </div>
-
-                <div class="w3-half">
-                    <img src="/w3images/atrium.jpg" style="width:100%" onclick="onClick(this)"
-                        alt="Windows for the atrium">
-                    <img src="/w3images/bedroom.jpg" style="width:100%" onclick="onClick(this)"
-                        alt="Bedroom and office in one space">
-                    <img src="/w3images/livingroom2.jpg" style="width:100%" onclick="onClick(this)"
-                        alt="Scandinavian design">
-                </div>
+                Adding table of workshops here
             </div>
 
             <!-- Modal for full size images on click-->
