--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ body {font-size:16px;}
         </nav>
 
         <!-- Top menu on small screens -->
-        <header style="background-color: #3689f4" class="w3-container w3-top w3-hide-large w3-xlarge w3-padding">
+        <header style="background-color: black; color: white;" class="w3-container w3-top w3-hide-large w3-xlarge w3-padding">
             <a href="javascript:void(0)" class="w3-button w3-margin-right"
                 onclick="w3_open()">&#9776;</a>
             <span>LIT</span>
@@ -171,7 +171,7 @@ body {font-size:16px;}
         <!-- W3.CSS Container -->
         <div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px">
             <p class="w3-right">Made with <span style="color: #e25555;">&hearts;</span> 
-                by <a href="https://ryabn.github.io/" title="Ryan Yang" target="_blank" class="w3-hover-opacity">Ryan</a> @ <a href="https://litpcc.com/" title="LITPCC" target="_blank" class="w3-hover-opacity">LITPCC</a></p>
+                at <a href="https://litpcc.com/" title="LITPCC" target="_blank" class="w3-hover-opacity">LITPCC</a></p>
         </div>
 
         <script>
