--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <style>
@@ -54,8 +56,35 @@ body {font-size:16px;}
             </div>
 
             <!-- Photo grid (modal) -->
-            <div class="w3-row-padding">
-                Adding table of workshops here
+            <div class="workshop-grid">
+                <div class="card"> 
+                    <div class="card-image">
+                        <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=400"/>
+                        <span class="card-title">Lockpicking: The Basics</span>
+                    </div>
+                    <div class="card-content">
+                        lorem ipsum consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                        minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure
+                        dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur. 
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=400"/>
+                        <span class="card-title">PockLicking: Ba Thesics</span>
+                    </div>
+                    <div class="card-content">
+                        t labore et dolore magna aliqua. Ut enim ad
+                        minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat. Duis aute irure
+                        dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                        fugiat nulla pariatur.lamco laboris nisi ut
+                        aliquip ex ea commodo consequat.
+                    </div>
+                </div>
             </div>
 
             <!-- Modal for full size images on click-->
