added workshop descriptions and some workshop css fixes

--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@ body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
 </style>
-
     <body>
-
         <!-- Sidebar/menu -->
         <nav class="w3-sidebar w3-black w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;"
             id="mySidebar"><br>
             <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft"
                 style="width:100%;font-size:22px">Close Menu</a>
             <div class="w3-container">
-                <h3 class="w3-padding-64"><b>Capture<br>The Flag</b></h3>
+                <h3><b>Capture<br>The Flag</b></h3>
             </div>
             <div class="w3-bar-block">
                 <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a>
@@ -59,30 +57,22 @@ body {font-size:16px;}
             <div class="workshop-grid">
                 <div class="card"> 
                     <div class="card-image">
-                        <img src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=400"/>
-                        <span class="card-title">Lockpicking: The Basics</span>
+                        <img src="https://images.unsplash.com/photo-1477949331575-2763034b5fb5?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1000&amp;q=80"/>
                     </div>
                     <div class="card-content">
-                        lorem ipsum consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                        minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. Duis aute irure
-                        dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                        fugiat nulla pariatur. 
+                        <span class="card-title">USB Rubber Duckies</span>
+                        Don't leave your computer unattended; someone could hack it in under ten seconds! A USB Rubber Ducky disguises itself as an innocent USB drive but injects keystrokes at lightning-fast speed. In this workshop, you will learn how to write scripts for one of the most infamous hardware hacking devices on the market.
+                        Beginner friendly!
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="https://images.pexels.com/photos/735911/pexels-photo-735911.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=300&w=400"/>
-                        <span class="card-title">PockLicking: Ba Thesics</span>
+                        <img src="https://images.unsplash.com/photo-1531417666976-ed2bdbeb043b?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=5184&amp;q=80 5184w"/>
                     </div>
                     <div class="card-content">
-                        t labore et dolore magna aliqua. Ut enim ad
-                        minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat. Duis aute irure
-                        dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                        fugiat nulla pariatur.lamco laboris nisi ut
-                        aliquip ex ea commodo consequat.
+                        <span class="card-title">Lock Picking</span>
+                        An attacker who has gained physical access to a machine can do much more damage in much less time. We explore the importance of physical security and demonstrate just how easy it is to get somewhere you shouldn't.
+                        Your instructor, Datagram, is a computer security consultant and forensic locksmith.                        
                     </div>
                 </div>
             </div>
