--- a/index.html
+++ b/index.html
@@ -49,8 +49,12 @@ body {font-size:16px;}
             <!-- Header -->
             <div class="w3-container" style="margin-top:80px" id="showcase">
                 <h1 class="w3-jumbo"><b>LIT</b></h1>
+                <div>
+                        Leadership in Technology is a student-run club at Pasadena City College. It aims to empower students considering technology careers with leadership skills while contributing educational resources to the surrounding community.
+                </div>
                 <h1 class="w3-xxxlarge text-blue"><b>Workshops.</b></h1>
                 <hr style="width:50px;border:5px solid #3689f4" class="w3-round">
+                <div>Leadership in Technology is working with <a style="white-space: nowrap" href="https://womenscyberjutsu.org/"> Women's Society of Cyberjutsu</a> to produce a series of cybersecurity workshops targeting beginners. Each workshop aims to introduce a fun topic and allow attendies to compete in a mini-competition to win a related prize. Click to register for free!</div>
             </div>
 
             <!-- Photo grid (modal) -->
@@ -74,8 +78,9 @@ body {font-size:16px;}
                         An attacker who has gained physical access to a machine can do much more damage in much less time. We explore the importance of physical security and demonstrate just how easy it is to get somewhere you shouldn't.
                         Your instructor, Datagram, is a computer security consultant and forensic locksmith.                        
                     </div>
-                </div>
+                </div>                
             </div>
+
 
             <!-- Modal for full size images on click-->
             <div id="modal01" class="w3-modal w3-black" style="padding-top:0"
@@ -92,18 +97,7 @@ body {font-size:16px;}
                 <h1 class="w3-xxxlarge text-blue"><b>Capture the Flag.</b></h1>
                 <hr style="width:50px;border:5px solid #3689f4" class="w3-round">
                 <p>What is Capture the Flag?</p>
-                <p>Some text about capture the flag - What is it? We
-                    are lorem ipsum consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                    minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat. Duis aute irure
-                    dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est
-                    laborum consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                    veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
+                <p>On June 1st, 2019, Leadership in Technology and Women's Society of Cyberjutsu will be hosting a cybersecurity capture the flag event. This is a game in which teams compete to complete various cybersecurity related challenges. Prizes will be awarded to the best teams! Want a competitive edge? The challenges will be based from lessons learned during the workshops!
                 </p>
             </div>
 
