added image because it was way too cool to not add

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@ body {font-size:16px;}
                 <p>What is Capture the Flag?</p>
                 <p>On June 1st, 2019, Leadership in Technology and Women's Society of Cyberjutsu will be hosting a cybersecurity capture the flag event. This is a game in which teams compete to complete various cybersecurity related challenges. Prizes will be awarded to the best teams! Want a competitive edge? The challenges will be based from lessons learned during the workshops!
                 </p>
+                <img src="https://images.unsplash.com/photo-1534488972407-5a4aa1e47d83?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1000&amp;q=80" class="single-image"/>
             </div>
 
             <!-- Contact -->
