--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ body {font-size:16px;}
 			function addToMailingList(){
 				name  = document.getElementById('name').value
 				email = document.getElementById('message').value
-				url = "https://script.google.com/macros/s/AKfycbyANQv11c3Uap3MYcmE10kDqLrj8qpmT2ZesGOr3O3fjFRIL968/exec?name=" + name + "&email=" + email;l
+				url = "https://script.google.com/macros/s/AKfycbyANQv11c3Uap3MYcmE10kDqLrj8qpmT2ZesGOr3O3fjFRIL968/exec?name=" + name + "&email=" + email;
 				console.log(url);
 				fetch(url, {method: 'post', mode:'cors'})
 			}
