typo. changed incorrect header text

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ body {font-size:16px;}
 
             <!-- Contact -->
             <div class="w3-container" id="contact" style="margin-top:75px">
-                <h1 class="w3-xxxlarge text-blue"><b>Mailing List.</b></h1>
+                <h1 class="w3-xxxlarge text-blue"><b>Contact.</b></h1>
                 <hr style="width:50px;border:5px solid #3689f4" class="w3-round">
                 <p>Questions or comments? Email us at PCCLITCTF@gmail.com</p>
                 <form>
