add dates to workshops

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ body {font-size:16px;}
                         </div>
                         <div class="card-content">
                             <span class="card-title">USB Rubber Duckies</span>
+							<p class="w3-opacity">March 2, 5:00 pm</p>
                             Don't leave your computer unattended; someone could hack it in under ten seconds! A USB Rubber Ducky disguises itself as an innocent USB drive but injects keystrokes at lightning-fast speed. In this workshop, you will learn how to write scripts for one of the most infamous hardware hacking devices on the market.
                             Beginner friendly!
                         </div>
@@ -78,6 +79,7 @@ body {font-size:16px;}
                         </div>
                         <div class="card-content">
                             <span class="card-title">Lock Picking</span>
+							<p class="w3-opacity">March 16, 5:00 pm</p>
                             An attacker who has gained physical access to a machine can do much more damage in much less time. We explore the importance of physical security and demonstrate just how easy it is to get somewhere you shouldn't.
                             Your instructor, Datagram, is a computer security consultant and forensic locksmith.                        
                         </div>
