remove rubber ducky workshop

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ body {font-size:16px;}
 
             <!-- Photo grid (modal) -->
             <div class="workshop-grid">
-                <a href="https://www.eventbrite.com/e/cybersecurity-workshop-usb-rubber-duckies-tickets-56223774824" target="_blank">
+                <!-- <a href="https://www.eventbrite.com/e/cybersecurity-workshop-usb-rubber-duckies-tickets-56223774824" target="_blank">
                     <div class="card"> 
                         <div class="card-image">
                             <img src="https://images.unsplash.com/photo-1477949331575-2763034b5fb5?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1000&amp;q=80"/>
@@ -71,7 +71,7 @@ body {font-size:16px;}
                             Beginner friendly!
                         </div>
                     </div>
-                </a>
+				</a> -->
                 <a href="https://www.eventbrite.com/e/cybersecurity-workshop-lock-picking-tickets-56211379750" target="_blank">
                     <div class="card">
                         <div class="card-image">
@@ -85,8 +85,8 @@ body {font-size:16px;}
                         </div>
                     </div>                
                 </a>
-				More coming soon!
             </div>
+			More coming soon!
 
 
             <!-- Modal for full size images on click-->
