put other workshop back because it looks dumb without it

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body {font-size:16px;}
 
             <!-- Header -->
             <div class="w3-container" style="margin-top:80px" id="showcase">
-                <h1 class="w3-jumbo"><b>LIT Cybersecurity</b></h1>
+                <h1 class="w3-jumbo"><b>LIT Cyber</b></h1>
                 <div>
                         Leadership in Technology is a student-run club at Pasadena City College. It aims to empower students considering technology careers with leadership skills while contributing educational resources to the surrounding community.
                 </div>
@@ -59,19 +59,6 @@ body {font-size:16px;}
 
             <!-- Photo grid (modal) -->
             <div class="workshop-grid">
-                <!-- <a href="https://www.eventbrite.com/e/cybersecurity-workshop-usb-rubber-duckies-tickets-56223774824" target="_blank">
-                    <div class="card"> 
-                        <div class="card-image">
-                            <img src="https://images.unsplash.com/photo-1477949331575-2763034b5fb5?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1000&amp;q=80"/>
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title">USB Rubber Duckies</span>
-							<p class="w3-opacity">March 2, 5:00 pm</p>
-                            Don't leave your computer unattended; someone could hack it in under ten seconds! A USB Rubber Ducky disguises itself as an innocent USB drive but injects keystrokes at lightning-fast speed. In this workshop, you will learn how to write scripts for one of the most infamous hardware hacking devices on the market.
-                            Beginner friendly!
-                        </div>
-                    </div>
-				</a> -->
                 <a href="https://www.eventbrite.com/e/cybersecurity-workshop-lock-picking-tickets-56211379750" target="_blank">
                     <div class="card">
                         <div class="card-image">
@@ -85,6 +72,19 @@ body {font-size:16px;}
                         </div>
                     </div>                
                 </a>
+                <a href="" target="_blank">
+                    <div class="card">
+                        <div class="card-image">
+                            <img src="https://images.unsplash.com/photo-1477949331575-2763034b5fb5?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1000&amp;q=80"/>
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title">USB Rubber Duckies</span>
+							<p class="w3-opacity">TBD</p>
+                            Don't leave your computer unattended; someone could hack it in under ten seconds! A USB Rubber Ducky disguises itself as an innocent USB drive but injects keystrokes at lightning-fast speed. In this workshop, you will learn how to write scripts for one of the most infamous hardware hacking devices on the market.
+                            Beginner friendly!
+                        </div>
+                    </div>
+				</a>
             </div>
 			More coming soon!
 
