don't link until we actually have a link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ body {font-size:16px;}
                         </div>
                     </div>                
                 </a>
-                <a href="" target="_blank">
+				<!-- <a href="#" target="_blank"> -->
                     <div class="card">
                         <div class="card-image">
                             <img src="https://images.unsplash.com/photo-1477949331575-2763034b5fb5?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1000&amp;q=80"/>
@@ -84,7 +84,7 @@ body {font-size:16px;}
                             Beginner friendly!
                         </div>
                     </div>
-				</a>
+				<!-- </a> -->
             </div>
 			More coming soon!
 
