make images load faster
1) serve them from github instead of unsplash
2) shrink 'em

--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@ body {font-size:16px;}
                 <a href="https://www.eventbrite.com/e/cybersecurity-workshop-lock-picking-tickets-56211379750" target="_blank">
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://images.unsplash.com/photo-1531417666976-ed2bdbeb043b?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=5184&amp;q=80 5184w"/>
+							<!-- eh I'm leaving the urls in here in case we need the original image -->
+							<!-- <img src="https://images.unsplash.com/photo-1531417666976-ed2bdbeb043b?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=5184&amp;q=80 5184w"/> -->
+                            <img src="images/lockpicking_small.jpg"/>
                         </div>
                         <div class="card-content">
                             <span class="card-title">Lock Picking</span>
@@ -75,7 +77,9 @@ body {font-size:16px;}
 				<!-- <a href="#" target="_blank"> -->
                     <div class="card">
                         <div class="card-image">
-                            <img src="https://images.unsplash.com/photo-1477949331575-2763034b5fb5?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1000&amp;q=80"/>
+							<!-- eh I'm leaving the urls in here in case we need the original image -->
+							<!-- <img src="https://images.unsplash.com/photo-1477949331575-2763034b5fb5?ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1000&amp;q=80"/> -->
+                            <img src="images/rubberducky_small.jpg"/>
                         </div>
                         <div class="card-content">
                             <span class="card-title">USB Rubber Duckies</span>
