add wifi cracking workshop

--- a/index.html
+++ b/index.html
@@ -59,6 +59,22 @@ body {font-size:16px;}
 
             <!-- Photo grid (modal) -->
             <div class="workshop-grid">
+                <a href="https://www.eventbrite.com/e/cybersecurity-workshop-wifi-hacking-tickets-61009577288" target="_blank">
+                    <div class="card">
+                        <div class="card-image">
+							<!-- eh I'm leaving the urls in here in case we need the original image -->
+							<!-- <img src="https://images.unsplash.com/photo-1531417666976-ed2bdbeb043b?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=5184&amp;q=80 5184w"/> -->
+                            <img src="images/wifi_cracking.jpg"/>
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title">Wi-Fi Hacking Workshop</span>
+							<p class="w3-opacity">May 4th, 5:00 pm</p>
+							Have you ever wondered how hard it is to hack the password to a Wi-Fi network? Come to our workshop to learn the basics of password cracking, get hands-on by cracking a target Wi-Fi network, and compete with fellow students in a Wi-Fi hacking game to win a prize!
+							Your instructor, Kody Kinzie, is a Wi-Fi security researcher who specializes in wireless hacking, and designed the game we’ll be playing in this workshop.
+							Equipment provided and beginner friendly!
+                        </div>
+                    </div>                
+                </a>
                 <a href="https://www.eventbrite.com/e/cybersecurity-workshop-lock-picking-tickets-59405105269" target="_blank">
                     <div class="card">
                         <div class="card-image">
