--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {font-size:16px;}
 							<p class="w3-opacity">May 4th, 5:00 pm</p>
 							Have you ever wondered how hard it is to hack the password to a Wi-Fi network? Come to our workshop to learn the basics of password cracking, get hands-on by cracking a target Wi-Fi network, and compete with fellow students in a Wi-Fi hacking game to win a prize!
 							Your instructor, Kody Kinzie, is a Wi-Fi security researcher who specializes in wireless hacking, and designed the game we’ll be playing in this workshop.
-							Equipment provided and beginner friendly!
+							Beginner friendly!
                         </div>
                     </div>                
                 </a>
