add linux workshop

--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@ body {font-size:16px;}
                         <div class="card-image">
 							<!-- eh I'm leaving the urls in here in case we need the original image -->
 							<!-- <img src="https://images.unsplash.com/photo-1531417666976-ed2bdbeb043b?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=5184&amp;q=80 5184w"/> -->
+                            <img src="images/LINUX_POST_OPTIM.gif"/>
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title">Intro to Linux</span>
+							<p class="w3-opacity">May 11th, 5:00 pm</p>
+							If you are looking for a career in computer science or computer information systems, a deeper knowledge of the Linux operating system is essential. In this workshop, you will learn some basic Linux concepts and commands to help you get started! Follow the link to learn about your instructors with over 35 years of experience between them!
+                        </div>
+                    </div>                
+                </a>
+                <a href="https://www.eventbrite.com/e/cybersecurity-workshop-wifi-hacking-tickets-61009577288" target="_blank">
+                    <div class="card">
+                        <div class="card-image">
+							<!-- eh I'm leaving the urls in here in case we need the original image -->
+							<!-- <img src="https://images.unsplash.com/photo-1531417666976-ed2bdbeb043b?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=5184&amp;q=80 5184w"/> -->
                             <img src="images/wifi_cracking.jpg"/>
                         </div>
                         <div class="card-content">
@@ -71,7 +85,6 @@ body {font-size:16px;}
 							<p class="w3-opacity">May 4th, 5:00 pm</p>
 							Have you ever wondered how hard it is to hack the password to a Wi-Fi network? Come to our workshop to learn the basics of password cracking, get hands-on by cracking a target Wi-Fi network, and compete with fellow students in a Wi-Fi hacking game to win a prize!
 							Your instructor, Kody Kinzie, is a Wi-Fi security researcher who specializes in wireless hacking, and designed the game we’ll be playing in this workshop.
-							Beginner friendly!
                         </div>
                     </div>                
                 </a>
